[gd_scene load_steps=9 format=3 uid="uid://bc4c3cm6vmakw"]

[ext_resource type="Script" uid="uid://blf37o24aytoh" path="res://scripts/game_sort.gd" id="1_wwklq"]
[ext_resource type="Texture2D" uid="uid://w48mh0kkiuyy" path="res://assets/figures/circle.png" id="2_bfs6g"]
[ext_resource type="Texture2D" uid="uid://bw3xny3h53d21" path="res://assets/figures/cross.png" id="3_pybrv"]
[ext_resource type="Texture2D" uid="uid://6j3jdfdapy0b" path="res://assets/figures/square.png" id="4_3474e"]
[ext_resource type="Texture2D" uid="uid://d3rpprfux40ic" path="res://assets/figures/triangle.png" id="5_80ibc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfs6g"]
bg_color = Color(0, 0, 0, 0.78431374)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.9019608)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pybrv"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3474e"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Sort" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwklq")

[node name="ContainerCard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -355.0
offset_right = 190.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bfs6g")

[node name="FigureLeft1" type="TextureRect" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -140.0
offset_right = -110.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bfs6g")
expand_mode = 1
stretch_mode = 4

[node name="FigureLeft2" type="TextureRect" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -60.0
offset_right = -110.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pybrv")
expand_mode = 1
stretch_mode = 5

[node name="FigureRight1" type="TextureRect" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -140.0
offset_right = 170.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_3474e")
expand_mode = 1
stretch_mode = 4

[node name="FigureRight2" type="TextureRect" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -60.0
offset_right = 170.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_80ibc")
expand_mode = 1
stretch_mode = 4

[node name="FigureMiddle" type="TextureRect" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bfs6g")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -112.0
offset_right = 22.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLeft" type="Button" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -75.0
offset_right = -10.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_pybrv")
text = "ESQUERDA"

[node name="ButtonRight" type="Button" parent="ContainerCard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -75.0
offset_right = 160.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3474e")
text = "DIREITA"

[node name="TimerGame" type="Timer" parent="."]

[node name="TimerDisplay" type="Timer" parent="."]

[node name="TimerInterval" type="Timer" parent="."]
